--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
         <!-- Footer -->
 
         <footer id="footer">
-          <a class="footer-icon fab fa-facebook" href="https://www.facebook.com/animeshdubey16900"></a>
-          <a class="footer-icon fab fa-linkedin" href="https://www.linkedin.com/in/animeshdubey1609"></a>
-          <a class="footer-icon fas fa-envelope" href="mailto:animesh16d@gmail.com"></a>
+          <a class="footer-icon fab fa-facebook" href="https://www.facebook.com/"></a>
+          <a class="footer-icon fab fa-linkedin" href="https://www.linkedin.com/"></a>
+          <a class="footer-icon fas fa-envelope" href="mailto:amansingh30008@gmail.com"></a>
           <a class="footer-icon fab fa-twitter" href="https://www.twitter.com"></a>
           <p>© Copyright 2018 TinDog</p>
         </footer>
